Fixed the scrollbar problem in the token window
Used 100vh instead of 100% to extend rows to full height. This prevents a scrollbar from appearing in the token window.

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -12,15 +12,15 @@
     color: grey;
 }
 
-/*
-html, body, body > .container-fluid, body > .container-fluid > .row {
-    height: 100%;
-}
-*/
+
 
 body {
     color: #fff;
     background-color: #36393f;
+}
+
+.container-fluid > .row {
+    height: 100vh;
 }
 
 .color-darkgray {
